aks/yamls/urlshort.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: url-shortener
spec:
  selector:
      matchLabels:
          app: url-shortener
  replicas: 1
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: michalsw/url-shortener
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            port: 80
            path: /us/healthz
        livenessProbe:
          httpGet:
            port: 80
            path: /us/healthz
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
          - name: httpdep
            containerPort: 80
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-svc
spec:
  selector:
    app: url-shortener
  ports:
    - name: httpsvc
      port: 80
      targetPort: httpdep
      protocol: TCP	
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: url-shortener-svc
              servicePort: 80
            path: /us
